[JAVA-44239]